show fade-out setting in http admin (implementation todo still)

--- a/obplayer/httpadmin/http/index.html
+++ b/obplayer/httpadmin/http/index.html
@@ -1368,6 +1368,17 @@
 
         <div style="display: none;" id="content-outputs" data-tns="Outputs Tab">
 
+          <h4 data-t>Show Fade Settings</h4>
+          
+          <table class="settings">
+            <tbody>
+              <tr>
+                <td title="fade_duration_tooltip" data-t>fade_duration</td>
+                <td><input type="text" name="fade_duration" value="<%= obplayer.Config.setting('fade_duration', True) %>"></td>
+              </tr>
+            </tbody>
+          </table>
+
           <h4 data-t>Audio Output Settings</h4>
 
           <table class="settings">
