--- a/obplayer/httpadmin/http/index.html
+++ b/obplayer/httpadmin/http/index.html
@@ -29,7 +29,7 @@
 
       <h1><img src="/oblogo.svg" width="150" /><%= obplayer.HTTPAdmin.title %></h1>
       <% if obplayer.SUPPORTED == False: %>
-          <div class="error">This system isn't a ML350/Raspberry Pi. This is a unsupported system, so your results may very.</div>
+          <div class="error">This system isn't a ML350/Raspberry Pi. This is an unsupported system, so your results may vary.</div>
       <% end %>
 
       <% if obplayer.Config.setting('http_admin_password',True) == 'admin': %>
